# MasterEngine

./: CMakeLists.txt  bTree.cpp  bTree.h  connectionManager.cpp  connectionManager.h  diskManager.cpp  diskManager.h  engine.cpp  engine.h  huffman.cpp  join.cpp  join.h  jsonUtils.cpp  jsonUtils.h  jsonutils.cpp  jsonutils.h  jsonutils.h.autosave  main.cpp  operationManager.cpp  operationManager.cpp.autosave  operationManager.h  resultCode.cpp  resultCode.h  table.cpp  table.h  table.h.autosave  tableManager.cpp  tableManager.h  tableutils.cpp  tableutils.cpp.autosave  tableutils.h  tableutils.h.autosave  where.cpp  where.h
